# graphk

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/core/: emitter.py  nodes.py  runner.py
src/graphk/: __init__.py
src/graphk.egg-info/: PKG-INFO  SOURCES.txt
src/graphk/core/: pipeline.py
