# =================================================================
# Project Configuration
# pip install -e .
# =================================================================

# =================================================================
# Build System
# =================================================================
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

# =================================================================
# Project Metadata
# =================================================================
[project]
name = "graphk"
dynamic = ["version"]
description = "Framework for Graph-based execution and pipeline programming"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
    { name = "Fernando Koch", email = "fernandokoch@me.com" }
]

dependencies = []

[project.urls]
Repository = "https://github.com/kochf1/graphk"
Issues = "https://github.com/kochf1/graphk/issues"


# =================================================================
# CLI (only enable if CLI exists)
# =================================================================
# [project.scripts]
# PACKAGE = "PACKAGE.ui.cli:main"

# =================================================================
# Package discovery
# =================================================================
[tool.setuptools.packages.find]
where = ["src"]

# =================================================================
# Dynamic version from code
# =================================================================
[tool.setuptools.dynamic]
version = { attr = "graphk.__version__" }

# =================================================================
# Include non-Python files
# =================================================================
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.txt", "*.json", "*.md"]